--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar class="nav" color="primary">
   <mat-toolbar-row>
     <span>Keeper</span>
+    <div class="spacer"></div>
+    <fa-icon [icon]="faCoffee"></fa-icon>
   </mat-toolbar-row>
 </mat-toolbar>
